feat: #64 - Init fastify project and config typeorm service

--- a/e-commerce-api/packages/typeorm-service/package.json
+++ b/e-commerce-api/packages/typeorm-service/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "private": true,
   "exports": {
-    ".": "./src/index.ts"
+    ".": {
+      "import": "./build/src/index.js",
+      "types": "./build/src/index.d.ts"
+    }
   },
   "scripts": {
     "lint": "eslint src/ --max-warnings 0",
     "test:watch": "vitest",
     "test": "vitest run",
     "check-types": "tsc --noEmit",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
