--- a/e-commerce-api/packages/typeorm-service/tsconfig.json
+++ b/e-commerce-api/packages/typeorm-service/tsconfig.json
@@ -1,14 +1,15 @@
 {
-   "compilerOptions": {
-      "lib": [
-         "es2021"
-      ],
-      "target": "es2021",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "outDir": "./build",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "sourceMap": true
-   }
+  "compilerOptions": {
+    "types": ["node"],
+    "lib": ["ES2022"],
+    "target": "es2021",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "outDir": "./build",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
+    "declaration": true
+  },
+  "exclude": ["node_modules"]
 }
