--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "tsx src/server.ts",
+    "dev": "tsx --watch src/server.ts",
     "lint": "eslint src/ --max-warnings 0",
     "test:watch": "vitest",
     "test": "vitest run",
@@ -17,8 +17,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@clerk/fastify": "^2.6.14",
+    "@fastify/type-provider-json-schema-to-ts": "^5.0.0",
     "@repo/typeorm-service": "workspace:^",
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "json-schema-to-ts": "^3.1.1",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
