--- a/e-commerce-api/apps/web/package.json
+++ b/e-commerce-api/apps/web/package.json
@@ -11,6 +11,7 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.7",
     "@repo/ui": "workspace:*",
     "next": "16.1.0",
     "react": "^19.2.0",
