fix: Fix not found meta entity

--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
+  "types": "index.d.ts",
   "main": "src/server.ts",
   "scripts": {
     "dev": "tsx --watch src/server.ts",
+    "build": "tsc -p tsconfig.json",
     "lint": "eslint src/ --max-warnings 0",
     "test:watch": "vitest",
     "test": "vitest run",
     "check-types": "tsc --noEmit",
-    "migration:generate": "npx typeorm-ts-node-commonjs migration:generate ./src/migrations/InitialDatabase -d ./src/configs/data-source.ts",
-    "migration:run": "npx typeorm-ts-node-commonjs migration:run -d ./src/configs/data-source.ts"
+    "migration:generate": "pnpm typeorm-cmj migration:generate ./src/migrations/UpdateUserEntity -d ./src/configs/data-source.ts",
+    "typeorm": "tsx ../../node_modules/typeorm/cli-ts-node-esm.js",
+    "typeorm-cmj": "tsx ../../node_modules/typeorm/cli-ts-node-commonjs.js",
+    "migration:run": "pnpm typeorm-cmj migration:run -d ./src/configs/data-source.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +26,9 @@
     "@repo/typeorm-service": "workspace:^",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "fastify-plugin": "^5.1.0",
     "json-schema-to-ts": "^3.1.1",
+    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
