--- a/e-commerce-api/package.json
+++ b/e-commerce-api/package.json
@@ -3,17 +3,17 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
+    "dev": "turbo watch dev --filter=@repo/typeorm-service --filter=e-commerce-api",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
     "prettier": "^3.7.4",
-    "turbo": "^2.7.3",
+    "turbo": "^2.7.4",
     "typescript": "5.9.2"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.28.0",
   "engines": {
     "node": ">=18"
   }
