--- a/e-commerce-api/pnpm-workspace.yaml
+++ b/e-commerce-api/pnpm-workspace.yaml
@@ -1,3 +1,10 @@
 packages:
-  - "apps/*"
-  - "packages/*"
+  - apps/*
+  - packages/*
+
+onlyBuiltDependencies:
+  - '@clerk/shared'
+  - better-sqlite3
+  - esbuild
+  - sharp
+  - sqlite3
