--- a/e-commerce-api/packages/typeorm-service/tsconfig.json
+++ b/e-commerce-api/packages/typeorm-service/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "rootDir": ".",
     "types": ["node"],
-    "lib": ["ES2024"],
-    "target": "es2024",
+    "lib": ["ES2022"],
+    "target": "ES2022",
     "module": "es2022",
     "moduleResolution": "bundler",
     "outDir": "./build",
