--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -12,10 +12,12 @@
     "test:watch": "vitest",
     "test": "vitest run",
     "check-types": "tsc --noEmit",
-    "migration:generate": "pnpm typeorm-cmj migration:generate ./src/migrations/UpdateUserEntity -d ./src/configs/data-source.ts",
+    "migration:generate": "pnpm typeorm-cmj migration:generate ./src/migrations/InitialDatabase -d ./src/configs/data-source.ts",
     "typeorm": "tsx ../../node_modules/typeorm/cli-ts-node-esm.js",
     "typeorm-cmj": "tsx ../../node_modules/typeorm/cli-ts-node-commonjs.js",
-    "migration:run": "pnpm typeorm-cmj migration:run -d ./src/configs/data-source.ts"
+    "migration:run": "pnpm typeorm-cmj migration:run -d ./src/configs/data-source.ts",
+    "seed-data": "pnpm typeorm-cmj migration:run -d ./src/configs/seed-data-source.ts",
+    "revert-data": "pnpm typeorm-cmj migration:revert -d ./src/configs/seed-data-source.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +26,7 @@
     "@clerk/fastify": "^2.6.14",
     "@fastify/type-provider-json-schema-to-ts": "^5.0.0",
     "@repo/typeorm-service": "workspace:^",
+    "better-sqlite3": "^12.5.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
@@ -41,5 +44,12 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
+  },
+  "imports": {
+    "#entities": "./src/entities/index.ts",
+    "#services": "./src/services/index.ts",
+    "#services/types": "./src/services/types.ts",
+    "#repositories": "./src/repositories/index.ts",
+    "#repositories/types": "./src/repositories/types.ts"
   }
 }
