feat: #65 - Refactor services and repositories for cart, category, and product management
- Introduced new services for Cart, CartItem, and Category with appropriate methods.
- Updated AbstractAuthService and AbstractUserService to extend BaseService with repository types.
- Implemented CartService methods for cart management including adding products and retrieving cart by user ID.
- Created CartItemService for handling cart item operations.
- Added CategoryService for fetching all categories.
- Refactored ProductService to include delete functionality and improved product retrieval.
- Removed deprecated entity and repository files related to user, product, and order management.
- Updated type definitions for cart and user roles.
- Enhanced error handling and logging in service methods.

--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -50,6 +50,8 @@
     "#services": "./src/services/index.ts",
     "#services/types": "./src/services/types.ts",
     "#repositories": "./src/repositories/index.ts",
-    "#repositories/types": "./src/repositories/types.ts"
+    "#middlewares": "./src/middlewares/index.ts",
+    "#repositories/types": "./src/repositories/types.ts",
+    "#schemas/*": "./src/schemas/*.ts"
   }
 }
