refactor: update controller names in routes for consistency
refactor: modify seed data to include user roles from Clerk

fix: enhance error handling in server setup

feat: implement user registration with cart creation in AuthService

refactor: streamline service base classes and repository usage

feat: add delete functionality for cart items in CartItemService

feat: improve cart service methods for better transaction handling

refactor: update category service to use repository pattern

feat: enhance product service with pagination support

chore: introduce new error handling types for better API responses

chore: create container types for better dependency management

chore: remove unused web page and clean up related code

--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -48,10 +48,13 @@
   "imports": {
     "#entities": "./src/entities/index.ts",
     "#services": "./src/services/index.ts",
-    "#services/types": "./src/services/types.ts",
+    "#services/*": "./src/services/*.ts",
+    "#controllers/*": "./src/controllers/*.ts",
+    "#controllers": "./src/controllers/index.ts",
     "#repositories": "./src/repositories/index.ts",
     "#middlewares": "./src/middlewares/index.ts",
-    "#repositories/types": "./src/repositories/types.ts",
-    "#schemas/*": "./src/schemas/*.ts"
+    "#repositories/*": "./src/repositories/*.ts",
+    "#schemas/*": "./src/schemas/*.ts",
+    "#types/*": "./src/types/*.ts"
   }
 }
