--- a/e-commerce-api/apps/web/package.json
+++ b/e-commerce-api/apps/web/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.7",
     "@repo/ui": "workspace:*",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -23,7 +27,10 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.39.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "5.9.2"
   }
 }
