--- a/e-commerce-api/apps/web/package.json
+++ b/e-commerce-api/apps/web/package.json
@@ -15,6 +15,8 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@repo/ui": "workspace:*",
+    "@tanstack/react-query": "^5.90.17",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
