--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -12,7 +12,7 @@
     "test:watch": "vitest",
     "test": "vitest run",
     "check-types": "tsc --noEmit",
-    "migration:generate": "pnpm typeorm-cmj migration:generate ./src/migrations/InitialDatabase -d ./src/configs/data-source.ts",
+    "migration:generate": "pnpm typeorm-cmj migration:generate ./src/migrations/IntegrateStripe -d ./src/configs/data-source.ts",
     "typeorm": "tsx ../../node_modules/typeorm/cli-ts-node-esm.js",
     "typeorm-cmj": "tsx ../../node_modules/typeorm/cli-ts-node-commonjs.js",
     "migration:run": "pnpm typeorm-cmj migration:run -d ./src/configs/data-source.ts",
@@ -33,6 +33,7 @@
     "fastify-plugin": "^5.1.0",
     "json-schema-to-ts": "^3.1.1",
     "reflect-metadata": "^0.2.2",
+    "stripe": "^20.2.0",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
@@ -56,6 +57,7 @@
     "#middlewares": "./src/middlewares/index.ts",
     "#repositories/*": "./src/repositories/*.ts",
     "#schemas/*": "./src/schemas/*.ts",
-    "#types/*": "./src/types/*.ts"
+    "#types/*": "./src/types/*.ts",
+    "#utils/*": "./src/utils/*.ts"
   }
 }
