feat: enhance payment and checkout services, add user save functionality
- Added AbstractPaymentGateway and AbstractCheckoutService types to services/types.ts
- Implemented save method in UserService for saving user data
- Updated AbstractUserService to include save method
- Refactored container.ts to use PaymentGateway and CheckoutService
- Modified CartContext to debounce addToCart function for better performance
- Introduced withCart HOC to manage cart functionality in ProductCard
- Updated ProductCard to handle multiple images and integrate with cart
- Changed product data structure to support images array instead of single image
- Updated Next.js configuration to support remote images
- Added babel-plugin-react-compiler for improved React compilation
- Updated package versions in package.json and pnpm-lock.yaml

--- a/e-commerce-api/apps/web/package.json
+++ b/e-commerce-api/apps/web/package.json
@@ -19,6 +19,7 @@
     "@stripe/stripe-js": "^8.6.1",
     "@tanstack/react-query": "^5.90.17",
     "@tanstack/react-query-devtools": "^5.91.2",
+    "babel-plugin-react-compiler": "^1.0.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
