--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -12,12 +12,12 @@
     "test:watch": "vitest",
     "test": "vitest run",
     "check-types": "tsc --noEmit",
-    "migration:generate": "pnpm typeorm-cmj migration:generate ./src/migrations/IntegrateStripe -d ./src/configs/data-source.ts",
+    "migration:generate": "pnpm typeorm-cmj migration:generate ./src/database/migrations/InitialDatabase -d ./src/database/data-source.ts",
     "typeorm": "tsx ../../node_modules/typeorm/cli-ts-node-esm.js",
     "typeorm-cmj": "tsx ../../node_modules/typeorm/cli-ts-node-commonjs.js",
-    "migration:run": "pnpm typeorm-cmj migration:run -d ./src/configs/data-source.ts",
-    "seed-data": "pnpm typeorm-cmj migration:run -d ./src/configs/seed-data-source.ts",
-    "revert-data": "pnpm typeorm-cmj migration:revert -d ./src/configs/seed-data-source.ts"
+    "migration:run": "pnpm typeorm-cmj migration:run -d ./src/database/data-source.ts",
+    "seed-data": "pnpm typeorm-cmj migration:run -d ./src/database/seed-data-source.ts",
+    "revert-data": "pnpm typeorm-cmj migration:revert -d ./src/database/seed-data-source.ts"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +37,7 @@
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@repo/eslint-config": "workspace:^",
     "@repo/typescript-config": "workspace:^",
     "@types/node": "^22.15.3",
@@ -48,7 +49,7 @@
     "vitest": "^4.0.16"
   },
   "imports": {
-    "#entities": "./src/entities/index.ts",
+    "#entities": "./src/database/entities/index.ts",
     "#services": "./src/services/index.ts",
     "#services/*": "./src/services/*.ts",
     "#controllers/*": "./src/controllers/*.ts",
@@ -58,6 +59,7 @@
     "#repositories/*": "./src/repositories/*.ts",
     "#schemas/*": "./src/schemas/*.ts",
     "#types/*": "./src/types/*.ts",
-    "#utils/*": "./src/utils/*.ts"
+    "#utils/*": "./src/utils/*.ts",
+    "#data-source": "./src/database/data-source.ts"
   }
 }
