--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -27,6 +27,7 @@
     "@fastify/cors": "^11.2.0",
     "@fastify/type-provider-json-schema-to-ts": "^5.0.0",
     "@repo/typeorm-service": "workspace:^",
+    "@sendgrid/mail": "^8.1.6",
     "better-sqlite3": "^12.5.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
@@ -50,6 +51,7 @@
   },
   "imports": {
     "#entities": "./src/database/entities/index.ts",
+    "#providers": "./src/providers/index.ts",
     "#services": "./src/services/index.ts",
     "#services/*": "./src/services/*.ts",
     "#controllers/*": "./src/controllers/*.ts",
