refactor: streamline provider and service architecture
- Updated package.json to include wildcard imports for providers and services.
- Modified ProductController to consistently include reply parameter in method signatures.
- Refactored AbstractProductController and related services to ensure consistent method signatures and improved type safety.
- Removed unused PaymentGateway and MailProvider references from FastifyRequest and BaseProvider.
- Simplified BaseProvider to accept a single context parameter.
- Updated SendGridMailProvider and StripePaymentGatewayProvider to utilize context instead of separate payment and mail parameters.
- Removed deprecated mail and payment gateway service files.
- Enhanced Container class to dynamically register services and controllers, improving modularity.
- Introduced utility functions for property checks and string manipulation.
- Added Nullable type for better null handling across services.

--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -52,6 +52,7 @@
   "imports": {
     "#entities": "./src/database/entities/index.ts",
     "#providers": "./src/providers/index.ts",
+    "#providers/*": "./src/providers/*.ts",
     "#services": "./src/services/index.ts",
     "#services/*": "./src/services/*.ts",
     "#controllers/*": "./src/controllers/*.ts",
