--- a/e-commerce-api/package.json
+++ b/e-commerce-api/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo watch dev --filter=@repo/typeorm-service --filter=e-commerce-api",
+    "dev": "turbo watch dev --filter=web --filter=e-commerce-api",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
@@ -13,7 +13,7 @@
     "turbo": "^2.7.4",
     "typescript": "5.9.2"
   },
-  "packageManager": "pnpm@10.28.1",
+  "packageManager": "pnpm@10.28.2",
   "engines": {
     "node": ">=18"
   }
