Refactor checkout page and cart context; integrate Clerk authentication, update cart handling, and improve order management
- Refactored CheckoutPage to use async/await for fetching client secret and cart items.
- Introduced a new Provider component for Stripe Elements in the checkout process.
- Updated cart handling to fetch cart items from the server and calculate total using a new utility function.
- Enhanced CartContext to redirect unauthenticated users to sign-in when adding items to the cart.
- Removed unused auth utility and streamlined order fetching logic.
- Updated layout to include OrganizationSwitcher for better user experience.
- Improved error handling and state management across cart and order functionalities.
- Added new utility functions for cart total calculation and improved image handling in cart items.
- Updated pnpm lockfile and turbo.json for environment variables.

--- a/e-commerce-api/turbo.json
+++ b/e-commerce-api/turbo.json
@@ -1,6 +1,28 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
+  "globalEnv": [
+    "DATABASE_TYPE",
+    "DATABASE_CONNECTOR_PACKAGE",
+    "DATABASE_PORT",
+    "DATABASE_USERNAME",
+    "DATABASE_PASSWORD",
+    "DATABASE_NAME",
+    "DATABASE_HOST",
+    "CLERK_PUBLISHABLE_KEY",
+    "CLERK_SECRET_KEY",
+    "CLERK_WEBHOOK_SIGNING_SECRET",
+    "CLERK_ORGANIZATION_ID",
+    "STRIPE_API_KEY",
+    "STRIPE_WEBHOOK_SIGNING_SECRET",
+    "SENDGRID_API_KEY",
+    "SENDGRID_TEMPLATE_ORDER_SUCCESS",
+    "SENDGRID_TEMPLATE_REGISTER_SUCCESS",
+    "SENDGRID_SUPPORT_EMAIL",
+    "SENDGRID_FROM_EMAIL",
+    "CLIENT_BASE_URL",
+    "CLIENT_LOGIN_PATH"
+  ],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
