--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -33,6 +33,7 @@
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
     "json-schema-to-ts": "^3.1.1",
+    "pg-query-stream": "^4.11.2",
     "reflect-metadata": "^0.2.2",
     "stripe": "^20.2.0",
     "typeorm": "^0.3.28"
