feat: enhance payment gateway and checkout process
- Added `getProducts` method to `StripePaymentGatewayProvider` for fetching product list.
- Implemented `getByCartId` method in `CartItemRepository` to retrieve items by cart ID.
- Created new repositories for `Invoice` and `InvoiceItem` with corresponding abstract classes.
- Updated `ProductRepository` to use string IDs for product retrieval and stock management.
- Refactored `CheckoutService` to handle cart preparation, invoice creation, and payment processing.
- Introduced `StockReservation` logic to manage product availability during checkout.
- Updated API routes for checkout to reflect new endpoint structure.
- Enhanced error handling and transaction management in checkout processes.
- Added new types and interfaces for invoice and payment handling.
- Updated frontend checkout page to align with new API structure.
- Added `dayjs` for date management in stock reservation expiration.

--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -13,6 +13,7 @@
     "test": "vitest run",
     "check-types": "tsc --noEmit",
     "migration:generate": "pnpm typeorm-cmj migration:generate ./src/database/migrations/InitialDatabase -d ./src/database/data-source.ts",
+    "revert-migration": "pnpm typeorm-cmj migration:revert -d ./src/database/data-source.ts",
     "typeorm": "tsx ../../node_modules/typeorm/cli-ts-node-esm.js",
     "typeorm-cmj": "tsx ../../node_modules/typeorm/cli-ts-node-commonjs.js",
     "migration:run": "pnpm typeorm-cmj migration:run -d ./src/database/data-source.ts",
@@ -29,6 +30,7 @@
     "@repo/typeorm-service": "workspace:^",
     "@sendgrid/mail": "^8.1.6",
     "better-sqlite3": "^12.5.0",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
