--- a/e-commerce-api/apps/web/package.json
+++ b/e-commerce-api/apps/web/package.json
@@ -32,6 +32,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.15.3",
