--- a/e-commerce-api/.prettierrc
+++ b/e-commerce-api/.prettierrc
@@ -11,7 +11,7 @@
   "importOrder": [
     "dotenv/config|reflect-metadata",
     "^@core/(.*)$",
-    "typeorm|fastify|@fastify/|@clerk/|@prisma/|@nestjs/|json-schema-to-ts|typeorm",
+    "typeorm|fastify|@fastify/|@clerk/|@prisma/|@nestjs/|json-schema-to-ts",
     "<THIRD_PARTY_MODULES>",
     "^@server/(.*)$",
     "^@ui/(.*)$",
@@ -20,20 +20,34 @@
     "^@/components/(.*)$",
     "^#env",
     "^#services/(.*)$",
+    "^#services",
     "^#repositories/(.*)$",
+    "^#repositories",
     "^#utils/(.*)$",
+    "^#utils",
     "^#controllers/(.*)$",
+    "^#controllers",
     "^#types/(.*)$",
+    "^#types",
     "^#dtos/(.*)$",
+    "^#dtos",
     "^#schemas/(.*)$",
+    "^#entities$",
     "^#entities/(.*)$",
     "^[./]"
   ],
   "overrides": [
     {
-      "files": ["**/*.ts", "**/*.tsx"],
+      "files": ["**/entities/*.ts"],
       "options": {
         "parser": "babel-ts"
+      }
+    },
+    {
+      "files": ["**/*.ts", "**/*.tsx"],
+      "excludeFiles": "**/entities/*.ts",
+      "options": {
+        "parser": "typescript"
       }
     },
     {
