--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -45,6 +45,7 @@
     "@repo/typescript-config": "workspace:^",
     "@types/node": "^22.15.3",
     "eslint": "^9.39.1",
+    "pino-pretty": "^13.1.3",
     "supertest": "^7.2.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
