feat: enhance testing and coverage capabilities
- Added test utilities for mocking Fastify requests and replies.
- Implemented coverage reporting for tests using Vitest.
- Updated ESLint configuration to include test files and adjust rules for better compatibility.
- Introduced setup files for test initialization and cleanup.
- Enhanced product, cart, and order controllers with comprehensive unit tests.
- Added new test cases for authentication and checkout processes.
- Improved overall test structure and organization for better maintainability.

--- a/e-commerce-api/.prettierrc
+++ b/e-commerce-api/.prettierrc
@@ -11,7 +11,7 @@
   "importOrder": [
     "dotenv/config|reflect-metadata",
     "^@core/(.*)$",
-    "typeorm|fastify|@fastify/|@clerk/|@prisma/|@nestjs/|json-schema-to-ts",
+    "typeorm|fastify|@fastify/|@clerk/|@prisma/|@nestjs/|json-schema-to-ts|vitest",
     "<THIRD_PARTY_MODULES>",
     "^@server/(.*)$",
     "^@ui/(.*)$",
@@ -31,6 +31,7 @@
     "^#types",
     "^#dtos/(.*)$",
     "^#dtos",
+    "^#test-utils$",
     "^#schemas/(.*)$",
     "^#entities$",
     "^#entities/(.*)$",
