--- a/e-commerce-api/package.json
+++ b/e-commerce-api/package.json
@@ -6,14 +6,18 @@
     "dev": "turbo watch dev --filter=web --filter=e-commerce-api",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
+    "test:coverage": "turbo run test:coverage"
   },
   "devDependencies": {
+    "@babel/parser": "^7.24.5",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.2",
+    "@vitest/coverage-v8": "^4.0.18",
     "prettier": "^3.7.4",
     "turbo": "^2.7.4",
-    "typescript": "5.9.2",
-    "@trivago/prettier-plugin-sort-imports": "^6.0.2",
-    "@babel/parser": "^7.24.5"
+    "typescript": "5.9.2"
   },
   "packageManager": "pnpm@10.28.2",
   "engines": {
