feat: integrate Swagger documentation and enhance middleware logging
- Added Swagger and Swagger UI dependencies for API documentation.
- Registered Swagger plugin in the Fastify server for automatic API documentation generation.
- Implemented request and response logging middleware for better monitoring and debugging.
- Standardized error handling middleware to provide consistent error responses across the application.
- Refactored controllers to extend a base controller for improved response handling.
- Introduced a container registry for managing service and repository dependencies.
- Enhanced various controllers to utilize the new response methods for better consistency.

--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -71,6 +71,8 @@
     "#types/*": "./src/types/*.ts",
     "#types": "./src/types/index.ts",
     "#utils/*": "./src/utils/*.ts",
+    "#utils/response": "./src/utils/response.ts",
+    "#configs/*": "./src/configs/*.ts",
     "#data-source": "./src/database/data-source.ts",
     "#test-utils": "./src/test-utils.ts"
   }
