--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "@clerk/fastify": "^2.6.14",
     "@fastify/cors": "^11.2.0",
+    "@fastify/helmet": "^13.0.2",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.5",
     "@fastify/type-provider-json-schema-to-ts": "^5.0.0",
