fix: update pnpm workspace configuration to include '@heroui/shared-utils' as a built dependency

--- a/e-commerce-api/pnpm-workspace.yaml
+++ b/e-commerce-api/pnpm-workspace.yaml
@@ -3,7 +3,8 @@ packages:
   - packages/*
 
 onlyBuiltDependencies:
-  - "@clerk/shared"
+  - '@clerk/shared'
+  - '@heroui/shared-utils'
   - better-sqlite3
   - esbuild
   - sharp
