--- a/e-commerce-api/apps/web/package.json
+++ b/e-commerce-api/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.7",
+    "@heroui/react": "^2.8.8",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@repo/ui": "workspace:*",
@@ -21,6 +22,7 @@
     "@tanstack/react-query-devtools": "^5.91.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.31.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "next-themes": "^0.4.6",
