feat: enhance checkout and order management features
- Updated ICheckoutService to include order details in payment intent response.
- Removed unused cart and product repositories from OrderService.
- Refactored createOrder method to improve order creation logic and removed it from IOrderService.
- Added CancelOrderButton component for order cancellation functionality.
- Implemented API route for cancelling orders.
- Updated order status management to include 'paid' status.
- Improved error handling in payment intent creation.
- Removed deprecated invoice-related code and types.
- Enhanced product card to display out-of-stock status.
- Added pagination controls to prevent rendering when total pages are less than or equal to one.
- Updated product type to enforce default price presence.
- Added new environment variable for invoice email template.

--- a/e-commerce-api/turbo.json
+++ b/e-commerce-api/turbo.json
@@ -20,6 +20,7 @@
     "SENDGRID_API_KEY",
     "SENDGRID_TEMPLATE_ORDER_SUCCESS",
     "SENDGRID_TEMPLATE_REGISTER_SUCCESS",
+    "SENDGRID_TEMPLATE_INVOICE",
     "SENDGRID_SUPPORT_EMAIL",
     "SENDGRID_FROM_EMAIL",
     "CLIENT_BASE_URL",
