--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -39,6 +39,7 @@
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
     "json-schema-to-ts": "^3.1.1",
+    "node-cron": "^4.2.1",
     "pg-query-stream": "^4.11.2",
     "reflect-metadata": "^0.2.2",
     "stripe": "^20.2.0",
@@ -49,6 +50,7 @@
     "@repo/eslint-config": "workspace:^",
     "@repo/typescript-config": "workspace:^",
     "@types/node": "^22.15.3",
+    "@types/node-cron": "^3.0.11",
     "eslint": "^9.39.1",
     "pino-pretty": "^13.1.3",
     "supertest": "^7.2.2",
