refactor: remove container registry and related functions
- Deleted the container registry implementation and its associated interfaces.
- Removed functions for building controllers and repositories from the registry.
- Updated the container utility to streamline adapter building without registry support.
- Added ResendEmailAdapter to the container utility.
- Updated pnpm-lock.yaml to include new dependencies for email handling and HTML parsing.

--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -42,6 +42,7 @@
     "node-cron": "^4.2.1",
     "pg-query-stream": "^4.11.2",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.9.1",
     "stripe": "^20.2.0",
     "typeorm": "^0.3.28"
   },
