--- a/e-commerce-api/apps/web/package.json
+++ b/e-commerce-api/apps/web/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.7",
     "@heroui/react": "^2.8.8",
+    "@heroui/spinner": "^2.2.27",
+    "@heroui/system": "^2.4.26",
+    "@heroui/theme": "^2.4.26",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@repo/ui": "workspace:*",
@@ -26,8 +29,8 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
