--- a/e-commerce-api/turbo.json
+++ b/e-commerce-api/turbo.json
@@ -14,6 +14,7 @@
     "CLERK_PUBLISHABLE_KEY",
     "CLERK_SECRET_KEY",
     "CLERK_WEBHOOK_SIGNING_SECRET",
+    "CLERK_TOKEN_TEMPLATE",
     "CLERK_ORGANIZATION_ID",
     "STRIPE_API_KEY",
     "STRIPE_WEBHOOK_SIGNING_SECRET",
@@ -23,6 +24,7 @@
     "SENDGRID_TEMPLATE_INVOICE",
     "SENDGRID_SUPPORT_EMAIL",
     "SENDGRID_FROM_EMAIL",
+    "RESEND_API_KEY",
     "CLIENT_BASE_URL",
     "CLIENT_LOGIN_PATH",
     "APP_NAME",
