--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -53,6 +53,7 @@
     "@repo/typescript-config": "workspace:^",
     "@types/node": "^22.15.3",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.9",
     "eslint": "^9.39.1",
     "pino-pretty": "^13.1.3",
     "supertest": "^7.2.2",
