Refactor schemas and routes for improved organization and clarity
- Consolidated order-related schemas into a single file for better maintainability.
- Updated routes to import schemas from a centralized index file.
- Removed deprecated checkout response schemas and integrated them into the checkout schema.
- Enhanced product query parameters to support sorting and filtering.
- Updated API routes to reflect changes in the checkout process.
- Refactored test utilities to create mock providers for payment and mail services.
- Adjusted frontend components to align with updated API and query parameters.
- Improved overall code structure and readability across services and tests.

--- a/e-commerce-api/apps/e-commerce-api/package.json
+++ b/e-commerce-api/apps/e-commerce-api/package.json
@@ -138,6 +138,11 @@
       "production": "./build/schemas/*.js",
       "default": "./src/schemas/*.ts"
     },
+    "#schemas": {
+      "development": "./src/schemas/index.ts",
+      "production": "./build/schemas/index.js",
+      "default": "./src/schemas/index.ts"
+    },
     "#types": {
       "development": "./src/types/index.ts",
       "production": "./build/types/index.js",
