Removes unused utility code and streamlines imports
Cleans up obsolete utility files and their tests to reduce maintenance overhead.
Reorganizes import statements for improved readability and consistency.
Expands configuration for better plugin and middleware support.

--- a/e-commerce-api/.prettierrc
+++ b/e-commerce-api/.prettierrc
@@ -35,6 +35,12 @@
     "^#schemas/(.*)$",
     "^#entities$",
     "^#entities/(.*)$",
+    "^#plugins/(.*)$",
+    "^#plugins",
+    "^#middlewares/(.*)$",
+    "^#middlewares",
+    "^#routes/(.*)$",
+    "^#routes",
     "^[./]"
   ],
   "overrides": [
