--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,7 +102,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          target: production
+          target: development
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
